--- a/mobile-app/app.json
+++ b/mobile-app/app.json
@@ -7,10 +7,10 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#7D4105"
+  "splash": {
+      "image": "./assets/Gemini_Generated_Image_tyzn4ftyzn4ftyzn.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#000000"
     },
     "ios": {
       "supportsTablet": true
